[package]
name = "floydrivest"
version = "0.1.0"
authors = ["Gethseman <f.iannelli.francesco229@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["nth_element", "Floyd Rivest", "SELECT"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
