[package]
name = "floydrivest"
version = "0.2.1"
authors = ["Gethseman <f.iannelli.francesco229@gmail.com>"]
edition = "2018"
description = "A lightweight crate that brings the Floyd-Rivest implementation of nth_element."
repository = "https://github.com/Gethseman/floydrivest"
license = "MIT"
keywords = ["nth_element", "Floyd-Rivest", "SELECT", "order_statistics"]
categories = ["algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
