[package]
name = "floydrivest"
version = "0.2.4"
authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
edition = "2018"
description = "A lightweight crate that brings the Floyd-Rivest implementation of nth_element."
repository = "https://github.com/frjnn/floydrivest"
license = "MIT"
keywords = ["nth_element", "Floyd-Rivest", "SELECT", "order_statistics"]
categories = ["algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
kth = "0.1.0"
order-stat = "0.1.3"
pdqselect = "0.1.0"
rand = "0.7.3"

[[bench]]
name = "compare"
harness = false

